--- a/persistence-modules/spring-boot-persistence/src/main/resources/application.properties
+++ b/persistence-modules/spring-boot-persistence/src/main/resources/application.properties
@@ -2,7 +2,9 @@ spring.datasource.driver-class-name = org.hsqldb.jdbc.JDBCDriver
 spring.datasource.url = jdbc:hsqldb:mem:test;DB_CLOSE_DELAY=-1
 spring.datasource.username = sa
 spring.datasource.password =
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = none
+spring.datasource.initialization-mode=always
+spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
 
 # Enabling H2 Console
 spring.h2.console.enabled=true
