--- a/persistence-modules/spring-boot-persistence/src/main/resources/persistence-generic-entity.properties
+++ b/persistence-modules/spring-boot-persistence/src/main/resources/persistence-generic-entity.properties
@@ -1,6 +1,6 @@
 jdbc.driverClassName=org.h2.Driver
 jdbc.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
-jdbc.user=sa
+jdbc.person=sa
 jdbc.pass=sa
 
 hibernate.dialect=org.hibernate.dialect.H2Dialect
